# crispy-disco-password-manager

./: Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20223010_up.sql
src/: main.rs
