[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaes = "0.6.4"
hex-literal = "0.3.4"
sqlx = {version = "0.6.2", features = ["mysql","runtime-tokio-native-tls"]}
tokio = {version = "1.20.0", features = ["macros"]}
anyhow = "1.0"
